--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@awesome-cordova-plugins/native-page-transitions": "^5.41.0",
     "@capacitor/android": "3.5.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.5.0",
@@ -26,6 +27,7 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
