--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@awesome-cordova-plugins/native-page-transitions": "^5.41.0",
     "@capacitor/android": "3.5.0",
     "@capacitor/app": "1.1.1",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.5.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
