--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "com.telerik.plugins.nativepagetransitions": "^0.7.0",
-    "firebase": "^9.8.1",
     "cordova-plugin-camera": "^6.0.0",
+    "firebase": "^9.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
