--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@awesome-cordova-plugins/camera": "^5.41.0",
     "@awesome-cordova-plugins/camera-preview": "^5.43.0",
     "@awesome-cordova-plugins/native-page-transitions": "^5.41.0",
-    "@capacitor/android": "3.5.1",
+    "@capacitor/android": "^3.6.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.5.0",
