--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "@awesome-cordova-plugins/camera": "^5.41.0",
     "@awesome-cordova-plugins/camera-preview": "^5.43.0",
     "@awesome-cordova-plugins/native-page-transitions": "^5.41.0",
-    "@capacitor/android": "3.5.0",
+    "@capacitor/android": "^3.6.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/camera": "^1.3.1",
-    "@capacitor/core": "3.5.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
+    "capacitor": "^0.0.3",
     "com.telerik.plugins.nativepagetransitions": "^0.7.0",
     "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-camera-preview": "^0.12.3",
